# kaggle-template-pacakge

./: README.md  pyproject.toml  requirements.txt
cli/: validate.go
cli/get_discussion/discussion/: predicting_heart_disease.md
cli/get_discussion/internal/api/: api_test.go  models.go
cli/get_discussion/internal/discussion/: discussion.go  html.go  html_test.go
docs/: Score.md  Setup.md
nb/: 000_nb.ipynb  data_001.ipynb
scripts/: download.py
